--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=ms-notificaciones
-server.port=8082
+server.port=${PORT:8080}
+
 
 #Configuracion de correo
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=novashop.notifications@gmail.com
-spring.mail.password=vaqi djpj hnqy ycwy
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
